--- a/About.Rmd
+++ b/About.Rmd
@@ -4,7 +4,11 @@ output:
   html_document:
     toc: true
     toc_float: true
-    theme: cerulean
+    theme: cosmo
 ---
 
 # This is a page for my resume
+
+Please find my resume attached:
+
+<iframe src="images/CV_Yi Su2023.pdf" width="100%" height="600px"></iframe>
