--- a/index.Rmd
+++ b/index.Rmd
@@ -13,7 +13,9 @@ Hello everyone! I am Yi Su, a graduate student in Biostatistics. Welcome to my p
 
 <img src="images/IMG_4220.JPG" style="width:35%">
 
-# Link to my resume
+# Helpful links
 
 you can click [here](About.html) to view my resume.
+
+you can click [here](dashboard.html) to view my dashboard for problem 2.
 
