--- a/index.Rmd
+++ b/index.Rmd
@@ -7,13 +7,13 @@ output:
     theme: cosmo
 ---
 
-# This is Yi's website
+## This is Yi's website
 
-Hello everyone! I am Yi Su, a graduate student in Biostatistics. Welcome to my page!
+Hello everyone! I am Yi Su, a graduate student in Biostatistics with a Bachelor’s degree in Statistics from the University of Washington, Seattle.  I am passionate about data and health research. Outside of school, I love traveling to new places, reading, and hiking. I am a cat lover and enjoy spending time with these amazing, playful companions. Welcome to my page!
 
 <img src="images/IMG_4220.JPG" style="width:35%">
 
-# Helpful links
+## Helpful links
 
 you can click [here](About.html) to view my resume.
 
